# MoviePlusPlus

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
examples/: genericExample.cpp
include/MoviePlusPlus/: MPP.h
src/: README.md  action.cpp  action.h  actor.cpp  actor.h  algebra.h  camera.h  costume.h  director.h  easing.h  headers.h  ideas.md  main.cpp  movie.cpp  movie.h  scene.h  vec2.h  writer.h
